--- a/src/main/resources/com/fitj/components/headers/header-home.fxml
+++ b/src/main/resources/com/fitj/components/headers/header-home.fxml
@@ -6,15 +6,15 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Text?>
 
-<Pane layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="55.0" prefWidth="1000.0" style="-fx-border-style: hidden none solid none; -fx-border-color: #054371; -fx-border-width: 2;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.headers.ControllerHeaderVisitor">
+<Pane layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="62.0" prefWidth="1000.0" style="-fx-border-style: hidden none solid none; -fx-border-color: #054371; -fx-border-width: 2;" stylesheets="@../../styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.headers.ControllerHeaderVisitor">
    <children>
       <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="14.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../../img/logo.png" />
          </image>
       </ImageView>
-      <Button fx:id="loginButton" layoutX="897.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToLogin" style="-fx-background-color: #054371;" text="Se connecter" textFill="WHITE" />
-      <Button fx:id="registerButton" layoutX="807.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToRegister" style="-fx-background-color: #054371;" text="Nouveau ?" textFill="WHITE" />
-      <Text fx:id="errorText" fill="RED" layoutX="356.0" layoutY="32.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message d'erreur" textAlignment="CENTER" wrappingWidth="287.2275390625" />
+      <Button fx:id="loginButton" layoutX="886.0" layoutY="13.0" mnemonicParsing="false" onAction="#goToLogin" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="Se connecter" textFill="WHITE" />
+      <Button fx:id="registerButton" layoutX="774.0" layoutY="13.0" mnemonicParsing="false" onAction="#goToRegister" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="Nouveau ?" textFill="WHITE" />
+      <Text fx:id="errorText" fill="RED" layoutX="58.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message d'erreur" textAlignment="CENTER" wrappingWidth="716.2275390625" />
    </children>
 </Pane>
