--- a/src/main/resources/com/fitj/components/recettes/list-mes-recettes.fxml
+++ b/src/main/resources/com/fitj/components/recettes/list-mes-recettes.fxml
@@ -4,14 +4,13 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<Pane prefHeight="600.0" prefWidth="900.0" scaleShape="false" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.recettes.ControllerMesRecettesList">
+<Pane prefHeight="600.0" prefWidth="900.0" scaleShape="false" stylesheets="@../../styles/style.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.recettes.ControllerMesRecettesList">
     <children>
-        <Button fx:id="addRecetteButton" layoutX="393.0" layoutY="530.0" mnemonicParsing="false" onAction="#goToAddRecette" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="+" textFill="WHITE" />
-        <ListView fx:id="listView" layoutX="17.0" layoutY="25.0" onMouseClicked="#selectItem" prefHeight="445.0" prefWidth="867.0" />
-        <Text fx:id="errorMessage" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="384.28125" />
-        <Button fx:id="updateRecetteButton" layoutX="258.0" layoutY="530.0" mnemonicParsing="false" onAction="#goToUpdateRecette" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="Modifier" textFill="WHITE" />
-        <Button fx:id="deleteRecetteButton" layoutX="527.0" layoutY="530.0" mnemonicParsing="false" onAction="#deleteRecette" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="Supprimer" textFill="WHITE" />
-        <Text fx:id="errorText" fill="RED" layoutX="130.0" layoutY="511.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error Message" textAlignment="CENTER" wrappingWidth="642.0" />
-        <Button fx:id="detailRecetteButton" layoutX="92.0" layoutY="531.0" mnemonicParsing="false" onAction="#goToDetailRecette" text="Voir" />
+        <Button fx:id="addRecetteButton" layoutX="455.0" layoutY="519.0" mnemonicParsing="false" onAction="#goToAddRecette" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="Ajouter" textFill="WHITE" />
+        <ListView fx:id="listView" layoutX="17.0" layoutY="25.0" onMouseClicked="#selectItem" prefHeight="450.0" prefWidth="867.0" styleClass="emptyRectangle" />
+        <Button fx:id="updateRecetteButton" layoutX="320.0" layoutY="519.0" mnemonicParsing="false" onAction="#goToUpdateRecette" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="Modifier" textFill="WHITE" />
+        <Button fx:id="deleteRecetteButton" layoutX="589.0" layoutY="519.0" mnemonicParsing="false" onAction="#deleteRecette" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="Supprimer" textFill="WHITE" />
+        <Text fx:id="errorText" fill="RED" layoutX="128.0" layoutY="501.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error Message" textAlignment="CENTER" wrappingWidth="642.0" />
+        <Button fx:id="detailRecetteButton" layoutX="205.0" layoutY="519.0" mnemonicParsing="false" onAction="#goToDetailRecette" styleClass="buttonBlue" text="Voir" />
     </children>
 </Pane>
