--- a/src/main/resources/com/fitj/views/aliments/update-aliment.fxml
+++ b/src/main/resources/com/fitj/views/aliments/update-aliment.fxml
@@ -7,23 +7,23 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.aliments.ControllerModifyAliment">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" stylesheets="@../../styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.aliments.ControllerModifyAliment">
     <children>
-      <Pane layoutX="138.0" layoutY="215.0" prefHeight="285.0" prefWidth="725.0" style="-fx-border-color: #054371; -fx-background-radius: 10px; -fx-border-radius: 10px; -fx-background-color: lightgrey;">
+      <Pane layoutX="138.0" layoutY="258.0" prefHeight="285.0" prefWidth="725.0" style="-fx-border-color: #054371; -fx-background-radius: 10px; -fx-border-radius: 10px; -fx-background-color: lightgrey;">
          <children>
-            <Text fill="#054371" layoutX="132.0" layoutY="105.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom de l'aliment">
+            <Text fill="#054371" layoutX="132.0" layoutY="124.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom de l'aliment">
                <font>
-                  <Font size="20.0" />
+                  <Font size="16.0" />
                </font>
             </Text>
-            <TextField fx:id="alimentNameUpdate" layoutX="132.0" layoutY="117.0" prefHeight="26.0" prefWidth="461.0" />
+            <TextField fx:id="alimentNameUpdate" layoutX="132.0" layoutY="129.0" prefHeight="26.0" prefWidth="461.0" styleClass="emptyRectangle" />
          </children></Pane>
-      <Text fill="#054371" layoutX="349.0" layoutY="154.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Modification de l'aliment">
+      <Text fill="#054371" layoutX="332.0" layoutY="159.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Modification de l'aliment">
          <font>
             <Font size="34.0" />
          </font>
       </Text>
-      <Button fx:id="updateAlimentButton" layoutX="420.0" layoutY="573.0" mnemonicParsing="false" onAction="#modifyAliment" style="-fx-background-color:  #054371;" text="Modifier l'aliment" textFill="WHITE">
+      <Button fx:id="updateAlimentButton" layoutX="445.0" layoutY="610.0" mnemonicParsing="false" onAction="#modifyAliment" styleClass="buttonBlue" text="Modifier l'aliment" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
