--- a/src/main/resources/com/fitj/components/exercices/list-exercice.fxml
+++ b/src/main/resources/com/fitj/components/exercices/list-exercice.fxml
@@ -5,13 +5,12 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Text?>
 
-
-<Pane prefHeight="598.0" prefWidth="936.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.exercices.ControllerExerciceList">
+<Pane prefHeight="598.0" prefWidth="936.0" stylesheets="@../../styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.exercices.ControllerExerciceList">
    <children>
-      <ListView fx:id="listView" layoutX="35.0" layoutY="27.0" prefHeight="470.0" prefWidth="867.0" />
-      <Button fx:id="addExerciceButton" layoutX="403.0" layoutY="548.0" mnemonicParsing="false" onAction="#goToAddExercice" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="+" textFill="WHITE" />
-      <Button fx:id="updateExerciceButton" layoutX="267.0" layoutY="548.0" mnemonicParsing="false" onAction="#goToUpdateExercice" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="Modifier" textFill="WHITE" />
-      <Button fx:id="deleteExerciceButton" layoutX="536.0" layoutY="548.0" mnemonicParsing="false" onAction="#goToDeleteExercice" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="Supprimer" textFill="WHITE" />
-      <Text fx:id="errorText" fill="RED" layoutX="140.0" layoutY="528.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error Message" textAlignment="CENTER" wrappingWidth="642.0" />
+      <ListView fx:id="listView" layoutX="35.0" layoutY="27.0" prefHeight="470.0" prefWidth="867.0" styleClass="emptyRectangle" />
+      <Button fx:id="addExerciceButton" layoutX="412.0" layoutY="529.0" mnemonicParsing="false" onAction="#goToAddExercice" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="Ajouter" textFill="WHITE" />
+      <Button fx:id="updateExerciceButton" layoutX="276.0" layoutY="529.0" mnemonicParsing="false" onAction="#goToUpdateExercice" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="Modifier" textFill="WHITE" />
+      <Button fx:id="deleteExerciceButton" layoutX="545.0" layoutY="529.0" mnemonicParsing="false" onAction="#goToDeleteExercice" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="Supprimer" textFill="WHITE" />
+      <Text fx:id="errorText" fill="RED" layoutX="148.0" layoutY="518.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error Message" textAlignment="CENTER" wrappingWidth="642.0" />
    </children>
 </Pane>
