--- a/src/main/resources/com/fitj/components/headers/header-admin.fxml
+++ b/src/main/resources/com/fitj/components/headers/header-admin.fxml
@@ -6,18 +6,18 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="55.0" prefWidth="1000.0" style="-fx-border-style: hidden none solid none; -fx-border-color: #054371; -fx-border-width: 2;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.headers.ControllerHeaderAdmin">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="55.0" prefWidth="1000.0" style="-fx-border-style: hidden none solid none; -fx-border-color: #054371; -fx-border-width: 2;" stylesheets="@../../styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.headers.ControllerHeaderAdmin">
     <children>
         <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="14.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../../../../img/logo.png" />
             </image>
         </ImageView>
-        <Button fx:id="monCompte" layoutX="888.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToMonCompte" style="-fx-background-color: #054371;" text="MON COMPTE" textFill="WHITE" />
-        <Button fx:id="coachs" layoutX="809.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToCoachs" style="-fx-background-color: #054371;" text="COACHS" textFill="WHITE" />
-        <Button fx:id="monEspace" layoutX="517.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToMonEspace" prefHeight="25.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="MON ESPACE" textFill="WHITE" />
-        <Button fx:id="shop" layoutX="647.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToShop" prefHeight="25.0" prefWidth="63.0" style="-fx-background-color: #054371;" text="SHOP" textFill="WHITE" />
-        <Button fx:id="clients" layoutX="722.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToClients" prefHeight="25.0" prefWidth="78.0" style="-fx-background-color: #054371;" text="CLIENTS" textFill="WHITE" />
-      <Text fx:id="errorText" fill="RED" layoutX="147.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message d'erreur" textAlignment="CENTER" wrappingWidth="287.2275390625" />
+        <Button fx:id="monCompte" layoutX="877.0" layoutY="13.0" mnemonicParsing="false" onAction="#goToMonCompte" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="MON COMPTE" textFill="WHITE" />
+        <Button fx:id="coachs" layoutX="765.0" layoutY="13.0" mnemonicParsing="false" onAction="#goToCoachs" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="COACHS" textFill="WHITE" />
+        <Button fx:id="monEspace" layoutX="409.0" layoutY="13.0" mnemonicParsing="false" onAction="#goToMonEspace" prefHeight="25.0" prefWidth="116.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="MON ESPACE" textFill="WHITE" />
+        <Button fx:id="shop" layoutX="538.0" layoutY="13.0" mnemonicParsing="false" onAction="#goToShop" prefHeight="25.0" prefWidth="63.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="SHOP" textFill="WHITE" />
+        <Button fx:id="clients" layoutX="650.0" layoutY="13.0" mnemonicParsing="false" onAction="#goToClients" prefHeight="25.0" prefWidth="78.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="CLIENTS" textFill="WHITE" />
+      <Text fx:id="errorText" fill="RED" layoutX="58.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message d'erreur" textAlignment="CENTER" wrappingWidth="287.2275390625" />
     </children>
 </Pane>
