--- a/src/main/resources/com/fitj/components/materiels/list-materiel.fxml
+++ b/src/main/resources/com/fitj/components/materiels/list-materiel.fxml
@@ -5,14 +5,12 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Text?>
 
-<Pane prefHeight="600.0" prefWidth="900.0" scaleShape="false" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.materiels.ControllerMaterielList">
+<Pane prefHeight="600.0" prefWidth="900.0" scaleShape="false" stylesheets="@../../styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.materiels.ControllerMaterielList">
    <children>
-       <Button fx:id="addMaterielButton" layoutX="392.0" layoutY="546.0" mnemonicParsing="false" onAction="#goToAddMateriel" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="+" textFill="WHITE" />
-       <ListView fx:id="listView" onMouseClicked="#selectItem" layoutX="17.0" layoutY="25.0" prefHeight="470.0" prefWidth="867.0" />
-       <Text fx:id="errorMessage" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="384.28125" />
-       <Button fx:id="updateMaterielButton" layoutX="257.0" layoutY="546.0" mnemonicParsing="false" onAction="#goToUpdateMateriel" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="Modifier" textFill="WHITE" />
-       <Button fx:id="deleteMaterielbutton" layoutX="526.0" layoutY="546.0" mnemonicParsing="false" onAction="#deleteMateriel" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="Supprimer" textFill="WHITE" />
-      <Text fx:id="errorText" fill="RED" layoutX="130.0" layoutY="526.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error Message" textAlignment="CENTER" wrappingWidth="642.0" />
+       <Button fx:id="addMaterielButton" layoutX="394.0" layoutY="531.0" mnemonicParsing="false" onAction="#goToAddMateriel" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="Ajouter" textFill="WHITE" />
+       <ListView fx:id="listView" layoutX="17.0" layoutY="25.0" onMouseClicked="#selectItem" prefHeight="470.0" prefWidth="867.0" styleClass="emptyRectangle" />
+       <Button fx:id="updateMaterielButton" layoutX="259.0" layoutY="531.0" mnemonicParsing="false" onAction="#goToUpdateMateriel" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="Modifier" textFill="WHITE" />
+       <Button fx:id="deleteMaterielbutton" layoutX="528.0" layoutY="531.0" mnemonicParsing="false" onAction="#deleteMateriel" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="Supprimer" textFill="WHITE" />
+      <Text fx:id="errorText" fill="RED" layoutX="130.0" layoutY="520.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error Message" textAlignment="CENTER" wrappingWidth="642.0" />
    </children>
 </Pane>
-
