--- a/src/main/resources/com/fitj/components/monCompte/list-sport-monCompte.fxml
+++ b/src/main/resources/com/fitj/components/monCompte/list-sport-monCompte.fxml
@@ -8,7 +8,7 @@
 
 <Pane prefHeight="491.0" prefWidth="423.0" scaleShape="false" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.sports.ControllerSportList">
    <children>
-       <Button fx:id="addSportButton" layoutX="53.0" layoutY="448.0" mnemonicParsing="false" onAction="#goToAddSport" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="+" textFill="WHITE" />
+       <Button fx:id="addSportButton" layoutX="53.0" layoutY="448.0" mnemonicParsing="false" onAction="#goToAddSport" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="Ajouter" textFill="WHITE" />
        <ListView fx:id="listView" layoutX="13.0" layoutY="64.0" prefHeight="376.0" prefWidth="387.0" />
        <Button fx:id="deleteSportbutton" layoutX="232.0" layoutY="448.0" mnemonicParsing="false" onAction="#deleteSport" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="Supprimer" textFill="WHITE" />
       <Text layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MES SPORTS" textAlignment="CENTER" wrappingWidth="424.03199768066406">
