--- a/src/main/resources/com/fitj/components/programmes/programmesNutritions/list-mes-programmesNutritions-achat.fxml
+++ b/src/main/resources/com/fitj/components/programmes/programmesNutritions/list-mes-programmesNutritions-achat.fxml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Text?>
 
-<Pane prefHeight="600.0" prefWidth="900.0" scaleShape="false" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.programmes.programmesNutritions.ControllerMesProframmeNutritionAchatList">
+<Pane prefHeight="600.0" prefWidth="900.0" scaleShape="false" stylesheets="@../../../styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.programmes.programmesNutritions.ControllerMesProframmeNutritionAchatList">
     <children>
-        <ListView fx:id="listView" layoutX="18.0" layoutY="24.0" onMouseClicked="#selectItem" prefHeight="423.0" prefWidth="867.0" />
-        <Text fx:id="errorMessage" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="384.28125" />
-        <Text fx:id="errorText" fill="RED" layoutX="132.0" layoutY="474.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error Message" textAlignment="CENTER" wrappingWidth="642.0" />
-        <Button fx:id="detailProgrammeNutritionButton" layoutX="88.0" layoutY="495.0" mnemonicParsing="false" onAction="#goToDetailProgrammeNutrition" text="Voir" />
+        <ListView fx:id="listView" layoutX="17.0" layoutY="25.0" onMouseClicked="#selectItem" prefHeight="418.0" prefWidth="867.0" styleClass="emptyRectangle" />
+        <Text fx:id="errorText" fill="RED" layoutX="129.0" layoutY="470.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error Message" textAlignment="CENTER" wrappingWidth="642.0" />
+        <Button fx:id="detailProgrammeNutritionButton" layoutX="400.0" layoutY="482.0" mnemonicParsing="false" onAction="#goToDetailProgrammeNutrition" styleClass="buttonBlue" text="Voir" />
     </children>
 </Pane>
