--- a/src/main/resources/com/fitj/styles/style.css
+++ b/src/main/resources/com/fitj/styles/style.css
@@ -9,8 +9,28 @@
     -fx-background-radius: 5px;
 }
 
+.text-area .content {
+    -fx-background-color: lightgray;
+    -fx-text-fill: #054371;
+}
+
+.list-view .list-cell:even {
+    -fx-background-color: rgba(5, 67, 113, 0.15);
+    -fx-text-fill: #054371;
+}
+.list-view .list-cell:odd {
+    -fx-background-color: transparent;
+    -fx-text-fill: #054371;
+}
+
+.list-view:focused .list-cell:filled:focused:selected {
+    -fx-background-color: #054371;
+    -fx-text-fill: white;
+}
+
 .rectangleShape {
     -fx-fill: transparent;
+    -fx-stroke: #054371;
     -fx-border-color: #054371;
     -fx-border-width: 1px;
     -fx-border-style: solid;
@@ -23,8 +43,16 @@
     -fx-font-size: 14px;
     -fx-border-radius: 5px;
     -fx-background-radius: 5px;
+    -fx-pref-height: 30px;
+    -fx-min-width: 100px;
 }
 
-.buttonBlue:hover {
+.buttonRed {
     -fx-background-color: red;
+    -fx-text-fill: white;
+    -fx-font-size: 14px;
+    -fx-border-radius: 5px;
+    -fx-background-radius: 5px;
+    -fx-pref-height: 30px;
+    -fx-min-width: 100px;
 }
