--- a/src/main/resources/com/fitj/views/coachs/monEspace-coach.fxml
+++ b/src/main/resources/com/fitj/views/coachs/monEspace-coach.fxml
@@ -1,31 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.coachs.ControllerCoachMonEspace">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" stylesheets="@../../styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.coachs.ControllerCoachMonEspace">
    <children>
       <fx:include source="../../components/headers/header-coach.fxml" />
    </children>
-   <Text fx:id="coachName" layoutX="32.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CoachName" wrappingWidth="241.2509765625">
+   <Text fx:id="coachName" fill="#054371" layoutX="32.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CoachName" wrappingWidth="241.2509765625">
       <font>
          <Font name="System Bold" size="30.0" />
       </font>
    </Text>
-   <ProgressBar fx:id="coachGrade" layoutX="273.0" layoutY="82.0" prefHeight="35.0" prefWidth="200.0" progress="0.74" style="-fx-accent: red;" />
-   <TabPane layoutX="23.0" layoutY="133.0" prefHeight="627.0" prefWidth="936.0" tabClosingPolicy="UNAVAILABLE">
+   <ProgressBar fx:id="coachGrade" layoutX="273.0" layoutY="82.0" prefHeight="35.0" prefWidth="200.0" progress="0.74" style="-fx-accent: #054371;" />
+   <TabPane layoutX="23.0" layoutY="133.0" prefHeight="627.0" prefWidth="936.0" styleClass="emptyRectangle" tabClosingPolicy="UNAVAILABLE">
       <tabs>
          <Tab text="Mes créations">
             <content>
                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                   <children>
-                     <TabPane prefHeight="602.0" prefWidth="936.0" tabClosingPolicy="UNAVAILABLE">
+                     <TabPane prefHeight="594.0" prefWidth="936.0" tabClosingPolicy="UNAVAILABLE">
                            <Tab text="Mes programmes">
                               <content>
                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                     <children>
-                                       <TabPane prefHeight="602.0" prefWidth="936.0" tabClosingPolicy="UNAVAILABLE">
+                                       <TabPane prefHeight="563.0" prefWidth="936.0" tabClosingPolicy="UNAVAILABLE">
                                           <tabs>
                                              <Tab text="Mes programmes sportifs">
                                                 <content>
@@ -59,7 +63,7 @@
                            </Tab>
                            <Tab text="Mes séances">
                               <content>
-                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" >
+                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                     <children>
                                        <fx:include source="../../components/seances/list-mes-seances.fxml" />
                                     </children>
@@ -100,7 +104,7 @@
          </Tab>
          <Tab text="Séances">
             <content>
-               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" >
+               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                   <children>
                      <fx:include source="../../components/seances/list-mes-seances-achat.fxml" />
                   </children>
@@ -115,7 +119,7 @@
                         <tabs>
                            <Tab text="Mes sports">
                               <content>
-                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="597.0" prefWidth="936.0">
                                     <children>
                                        <fx:include source="../../components/sports/list-mes-sport.fxml" />
                                     </children>
