--- a/src/main/resources/com/fitj/views/materiels/add-mymateriel.fxml
+++ b/src/main/resources/com/fitj/views/materiels/add-mymateriel.fxml
@@ -6,19 +6,19 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.materiels.ControllerAddMonMateriel">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" stylesheets="@../../styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.materiels.ControllerAddMonMateriel">
     <children>
       <VBox layoutX="1.0" prefHeight="55.0" prefWidth="1000.0">
          <children>
              <fx:include source="../../components/headers/header-admin.fxml" />
          </children>
       </VBox>
-      <Pane layoutX="36.0" layoutY="92.0" prefHeight="600.0" prefWidth="900.0" scaleShape="false">
+      <Pane layoutX="51.0" layoutY="100.0" prefHeight="600.0" prefWidth="900.0" scaleShape="false">
          <children>
-            <Button fx:id="addMaterielButton" layoutX="393.0" layoutY="547.0" mnemonicParsing="false" onAction="#AddMateriel" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="+" textFill="WHITE" />
-            <ListView fx:id="listView" layoutX="39.0" layoutY="44.0" prefHeight="470.0" prefWidth="867.0" />
+            <Button fx:id="addMaterielButton" layoutX="393.0" layoutY="547.0" mnemonicParsing="false" onAction="#AddMateriel" prefHeight="26.0" prefWidth="116.0" styleClass="buttonBlue" text="Ajouter" textFill="WHITE" />
+            <ListView fx:id="listView" layoutX="18.0" layoutY="46.0" prefHeight="470.0" prefWidth="867.0" styleClass="emptyRectangle" />
             <Text fx:id="errorMessage" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="384.28125" />
-            <Text fx:id="errorText" fill="RED" layoutX="130.0" layoutY="529.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error Message" textAlignment="CENTER" wrappingWidth="642.0" />
+            <Text fx:id="errorText" fill="RED" layoutX="131.0" layoutY="537.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error Message" textAlignment="CENTER" wrappingWidth="642.0" />
          </children>
       </Pane>
     </children>
