--- a/src/main/resources/com/fitj/views/materiels/update-materiel.fxml
+++ b/src/main/resources/com/fitj/views/materiels/update-materiel.fxml
@@ -7,23 +7,23 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.materiels.ControllerModifyMateriel">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" stylesheets="@../../styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.materiels.ControllerModifyMateriel">
     <children>
-      <Pane layoutX="138.0" layoutY="215.0" prefHeight="285.0" prefWidth="725.0" style="-fx-border-color: #054371; -fx-background-radius: 10px; -fx-border-radius: 10px; -fx-background-color: lightgrey;">
+      <Pane layoutX="139.0" layoutY="258.0" prefHeight="285.0" prefWidth="725.0" style="-fx-border-color: #054371; -fx-background-radius: 10px; -fx-border-radius: 10px; -fx-background-color: lightgrey;">
          <children>
-            <Text fill="#054371" layoutX="132.0" layoutY="105.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom du materiel">
+            <Text fill="#054371" layoutX="132.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom du materiel">
                <font>
-                  <Font size="20.0" />
+                  <Font size="16.0" />
                </font>
             </Text>
-            <TextField fx:id="materielNameUpdate" layoutX="132.0" layoutY="117.0" prefHeight="26.0" prefWidth="461.0" />
+            <TextField fx:id="materielNameUpdate" layoutX="132.0" layoutY="117.0" prefHeight="26.0" prefWidth="461.0" styleClass="emptyRectangle" />
          </children></Pane>
-      <Text fill="#054371" layoutX="349.0" layoutY="154.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Modification du materiel">
+      <Text fill="#054371" layoutX="331.0" layoutY="160.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Modification du materiel">
          <font>
             <Font size="34.0" />
          </font>
       </Text>
-      <Button fx:id="updateMaterielButton" layoutX="420.0" layoutY="573.0" mnemonicParsing="false" onAction="#modifyMateriel" style="-fx-background-color:  #054371;" text="Modifier le materiel" textFill="WHITE">
+      <Button fx:id="updateMaterielButton" layoutX="428.0" layoutY="650.0" mnemonicParsing="false" onAction="#modifyMateriel" prefWidth="144.0" styleClass="buttonBlue" text="Modifier le materiel" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
