--- a/src/main/resources/com/fitj/views/programmes/programmesNutritions/create-programmeNutrition.fxml
+++ b/src/main/resources/com/fitj/views/programmes/programmesNutritions/create-programmeNutrition.fxml
@@ -46,14 +46,15 @@
             <Text fill="#054371" layoutX="376.0" layoutY="404.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Durée en mois" />
             <Text fill="#054371" layoutX="376.0" layoutY="319.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Prix" />
             <ComboBox fx:id="typeProgrammeNutrition" layoutX="40.0" layoutY="46.0" prefWidth="150.0" promptText="Difficulté" styleClass="emptyRectangle" />
-            <Slider fx:id="nbMoisProgrammeNutrition" layoutX="396.0" layoutY="424.0" majorTickUnit="1.0" max="12.0" min="1.0" minorTickCount="1" prefHeight="33.0" prefWidth="271.0" showTickLabels="true" value="6.0" />
+            <Slider fx:id="nbMoisProgrammeNutrition" layoutX="396.0" layoutY="424.0" majorTickUnit="1.0" max="12.0" min="1.0" minorTickCount="1" onMouseReleased="#updateMoisValue" prefHeight="33.0" prefWidth="271.0" showTickLabels="true" value="6.0" />
             <Slider fx:id="prixProgrammeNutrition" layoutX="396.0" layoutY="339.0" max="2000.0" onMouseReleased="#updateMontantProgramme" prefHeight="33.0" prefWidth="271.0" showTickLabels="true" />
-            <Text fx:id="montantProgramme" fill="RED" layoutX="645.0" layoutY="319.0" strokeType="OUTSIDE" strokeWidth="0.0" text="montant" />
+            <Text fx:id="montantProgramme" fill="RED" layoutX="613.0" layoutY="319.0" strokeType="OUTSIDE" strokeWidth="0.0" text="montant" textAlignment="RIGHT" wrappingWidth="77.90478515625" />
             <Text fill="#054371" layoutX="376.0" layoutY="102.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Les recettes disponibles">
                <font>
                   <Font size="16.0" />
                </font>
             </Text>
+            <Text fx:id="nbMoisValue" fill="RED" layoutX="614.0" layoutY="404.0" strokeType="OUTSIDE" strokeWidth="0.0" text="mois" textAlignment="RIGHT" wrappingWidth="77.90478515625" />
             </children>
         </Pane>
         <Text fill="#054371" layoutX="227.0" layoutY="134.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Créer un nouveau programme nutrition">
