--- a/src/main/resources/com/fitj/views/programmes/programmesNutritions/detail-programmeNutrition.fxml
+++ b/src/main/resources/com/fitj/views/programmes/programmesNutritions/detail-programmeNutrition.fxml
@@ -1,36 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
+<?import javafx.scene.text.TextFlow?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.programmes.programmesNutritions.ControllerDetailProgrammeNutrition">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" stylesheets="@../../../styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.programmes.programmesNutritions.ControllerDetailProgrammeNutrition">
     <children>
         <Pane layoutX="139.0" layoutY="213.0" prefHeight="461.0" prefWidth="725.0" style="-fx-border-color: #054371; -fx-background-radius: 10px; -fx-border-radius: 10px; -fx-background-color: lightgrey;">
             <children>
-                <Text fill="#054371" layoutX="295.0" layoutY="94.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Les recettes">
+                <Text fill="#054371" layoutX="143.0" layoutY="103.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Recettes du programme">
+                    <font>
+                        <Font size="16.0" />
+                    </font>
+                </Text>
+                <ListView fx:id="listViewRecetteProgrammeNutrition" layoutX="143.0" layoutY="108.0" onMouseClicked="#handlerViewIngredient" prefHeight="170.0" prefWidth="448.0" styleClass="emptyRectangle" />
+                <Text fx:id="nomProgrammeNutrition" fill="#054371" layoutX="279.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom du programme">
                     <font>
                         <Font size="20.0" />
                     </font>
                 </Text>
-                <ListView fx:id="listViewRecetteProgrammeNutrition" layoutX="222.0" layoutY="110.0" onMouseClicked="#handlerViewIngredient" prefHeight="170.0" prefWidth="281.0" />
-                <Text fx:id="nomProgrammeNutrition" layoutX="256.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom du programme">
-                    <font>
-                        <Font size="20.0" />
-                    </font>
-                </Text>
-                <Button fx:id="detailProgrammeNutritionButton" layoutX="317.0" layoutY="291.0" mnemonicParsing="false" onAction="#goToDetailRecette" prefHeight="27.0" prefWidth="92.0" text="Voir" />
-            <Text fx:id="programmeType" layoutX="75.0" layoutY="399.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Difficulté" />
-            <Text layoutX="613.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Crée par : " />
-            <Text fx:id="nomCoach" layoutX="611.0" layoutY="70.0" strokeType="OUTSIDE" strokeWidth="0.0" text="nomCoach" />
-            <Text layoutX="333.0" layoutY="339.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description" />
-            <TextFlow fx:id="descriptionProgramme" layoutX="237.0" layoutY="350.0" prefHeight="89.0" prefWidth="253.0" />
-            <Text layoutX="574.0" layoutY="399.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Durée :" />
-            <Text fx:id="nbMoisProgramme" layoutX="617.0" layoutY="399.0" strokeType="OUTSIDE" strokeWidth="0.0" text="nbMois" />
-            <Text layoutX="646.0" layoutY="399.0" strokeType="OUTSIDE" strokeWidth="0.0" text="mois" />
+                <Button fx:id="detailProgrammeNutritionButton" layoutX="143.0" layoutY="285.0" mnemonicParsing="false" onAction="#goToDetailRecette" prefHeight="27.0" prefWidth="92.0" styleClass="buttonBlue" text="Voir" />
+            <Text fx:id="programmeType" fill="#054371" layoutX="36.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Difficulté" />
+            <Text fill="#054371" layoutX="545.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Crée par : " />
+            <Text fx:id="nomCoach" fill="#054371" layoutX="600.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="nomCoach" wrappingWidth="84.05517578125" />
+            <TextFlow fx:id="descriptionProgramme" layoutX="141.0" layoutY="350.0" prefHeight="89.0" prefWidth="448.0" />
+            <Text fill="#054371" layoutX="108.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Durée :" />
+            <Text fx:id="nbMoisProgramme" fill="#054371" layoutX="153.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="nbMois" wrappingWidth="60.05517578125" />
+            <Text fill="#054371" layoutX="140.0" layoutY="346.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description" wrappingWidth="92.0" />
             </children>
         </Pane>
-        <Text fill="#054371" layoutX="271.0" layoutY="135.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Détail du programme nutrition">
+        <Text fill="#054371" layoutX="289.0" layoutY="147.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Détail du programme nutrition">
             <font>
                 <Font size="34.0" />
             </font>
@@ -46,7 +49,7 @@
             </children>
         </VBox>
         <Text fx:id="errorText" fill="RED" layoutX="139.0" layoutY="191.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message d'erreur" textAlignment="CENTER" wrappingWidth="725.0" />
-        <Button fx:id="updateProgrammeNutritionButton" layoutX="335.0" layoutY="711.0" mnemonicParsing="false" onAction="#updateProgrammeNutrition" prefHeight="43.0" prefWidth="114.0" text="Modifier" />
-        <Button fx:id="deleteProgrammeNutritionButton" layoutX="585.0" layoutY="711.0" mnemonicParsing="false" onAction="#deleteProgrammeNutrition" prefHeight="43.0" prefWidth="114.0" text="Supprimer" />
+        <Button fx:id="updateProgrammeNutritionButton" layoutX="394.0" layoutY="694.0" mnemonicParsing="false" onAction="#updateProgrammeNutrition" prefHeight="43.0" prefWidth="114.0" styleClass="buttonBlue" text="Modifier" />
+        <Button fx:id="deleteProgrammeNutritionButton" layoutX="509.0" layoutY="694.0" mnemonicParsing="false" onAction="#deleteProgrammeNutrition" prefHeight="43.0" prefWidth="114.0" styleClass="buttonBlue" text="Supprimer" />
     </children>
 </Pane>
