--- a/src/main/resources/com/fitj/views/programmes/programmesNutritions/update-programmeNutrition.fxml
+++ b/src/main/resources/com/fitj/views/programmes/programmesNutritions/update-programmeNutrition.fxml
@@ -1,70 +1,82 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import java.lang.String?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.programmes.programmesNutritions.ControllerModifyProgrammeNutrition">
-    <children>
-        <Pane layoutX="138.0" layoutY="215.0" prefHeight="461.0" prefWidth="725.0" style="-fx-border-color: #054371; -fx-background-radius: 10px; -fx-border-radius: 10px; -fx-background-color: lightgrey;">
-            <children>
-                <Text fill="#054371" layoutX="124.0" layoutY="103.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Les Recettes">
-                    <font>
-                        <Font size="20.0" />
-                    </font>
-                </Text>
-                <TextField fx:id="nomProgrammeNutrition" layoutX="132.0" layoutY="48.0" prefHeight="26.0" prefWidth="461.0" />
-                <ListView fx:id="listViewRecetteProgrammeNutrition" layoutX="74.0" layoutY="110.0" onMouseClicked="#setRecetteSelectedToDelete" prefHeight="150.0" prefWidth="232.0" />
-                <TabPane layoutX="409.0" layoutY="88.0" prefHeight="171.0" prefWidth="274.0" tabClosingPolicy="UNAVAILABLE">
-                    <tabs>
-                        <Tab text="Recettes">
-                            <content>
-                                <ScrollPane hbarPolicy="NEVER" layoutX="426.0" layoutY="140.0" maxHeight="-Infinity" prefHeight="139.0" prefWidth="274.0">
-                                    <content>
-                                        <ListView fx:id="listViewRecette" onMouseClicked="#setRecetteSelected" prefHeight="126.0" prefWidth="232.0" />
-                                    </content>
-                                </ScrollPane>
-                            </content>
-                        </Tab>
-                    </tabs>
-                </TabPane>
-                <Button layoutX="144.0" layoutY="266.0" mnemonicParsing="false" onMouseClicked="#supprimerRecette" prefHeight="27.0" prefWidth="92.0" text="Supprimer" />
-                <Button layoutX="487.0" layoutY="267.0" mnemonicParsing="false" onMouseClicked="#addRecette" prefHeight="25.0" prefWidth="92.0" text="Ajouter" />
-                <Text layoutX="223.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom du programme nutrition">
-                    <font>
-                        <Font size="20.0" />
-                    </font>
-                </Text>
-                <TextArea fx:id="descriptionProgramme" layoutX="214.0" layoutY="305.0" prefHeight="86.0" prefWidth="315.0" />
-                <Text layoutX="332.0" layoutY="284.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description" />
-                <Text layoutX="593.0" layoutY="413.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Durée en mois" />
-                <Text layoutX="319.0" layoutY="413.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Prix" />
-                <ComboBox fx:id="typeProgrammeNutrition" layoutX="40.0" layoutY="422.0" prefWidth="150.0" promptText="Difficulté" />
-                <Slider fx:id="nbMoisProgrammeNutrition" layoutX="561.0" layoutY="420.0" majorTickUnit="1.0" max="12.0" min="1.0" minorTickCount="1" showTickLabels="true" value="6.0" />
-                <Slider fx:id="prixProgrammeNutrition" layoutX="293.0" layoutY="423.0" max="2000.0" onMouseReleased="#updateMontantProgramme" showTickLabels="true" />
-                <Text fx:id="montantProgramme" layoutX="373.0" layoutY="413.0" strokeType="OUTSIDE" strokeWidth="0.0" text="montant" />
-            </children>
-        </Pane>
-        <Text fill="#054371" layoutX="204.0" layoutY="134.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mettre à jour un nouveau programme nutrition">
-            <font>
-                <Font size="34.0" />
-            </font>
-        </Text>
-        <Button fx:id="updateProgrammeNutritionButton" layoutX="359.0" layoutY="701.0" mnemonicParsing="false" onAction="#updateProgrammeNutrition" style="-fx-background-color:  #054371;" text="Mettre à jour le programme nutrition" textFill="WHITE">
-            <font>
-                <Font size="20.0" />
-            </font>
-        </Button>
-        <VBox fx:id="headerAdmin" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
-            <children>
-                <fx:include source="../../../components/headers/header-admin.fxml" />
-            </children>
-        </VBox>
-        <VBox fx:id="headerCoach" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
-            <children>
-                <fx:include source="../../../components/headers/header-coach.fxml" />
-            </children>
-        </VBox>
-        <Text fx:id="errorText" fill="RED" layoutX="137.0" layoutY="187.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message d'erreur" textAlignment="CENTER" wrappingWidth="725.0" />
-    </children>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" stylesheets="@../../../styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.programmes.programmesNutritions.ControllerModifyProgrammeNutrition">
+<children>
+    <Pane layoutX="138.0" layoutY="215.0" prefHeight="495.0" prefWidth="725.0" style="-fx-border-color: #054371; -fx-background-radius: 10px; -fx-border-radius: 10px; -fx-background-color: lightgrey;">
+        <children>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="65.0" layoutX="376.0" layoutY="322.0" stroke="#054371" strokeType="INSIDE" width="315.0">
+                <styleClass>
+                    <String fx:value="rectangleShape" />
+                </styleClass></Rectangle>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="65.0" layoutX="376.0" layoutY="408.0" stroke="#054371" strokeType="INSIDE" styleClass="rectangleShape" width="315.0">
+                <styleClass>
+                    <String fx:value="rectangleShape" />
+                </styleClass>
+            </Rectangle>
+            <Text fill="#054371" layoutX="40.0" layoutY="103.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Les recettes du programmes">
+                <font>
+                    <Font size="16.0" />
+                </font>
+            </Text>
+            <TextField fx:id="nomProgrammeNutrition" layoutX="231.0" layoutY="46.0" prefHeight="28.0" prefWidth="461.0" styleClass="emptyRectangle" />
+            <ListView fx:id="listViewRecetteProgrammeNutrition" layoutX="40.0" layoutY="111.0" onMouseClicked="#setRecetteSelectedToDelete" prefHeight="150.0" prefWidth="315.0" styleClass="emptyRectangle" />
+            <ListView fx:id="listViewRecette" layoutX="376.0" layoutY="111.0" onMouseClicked="#setRecetteSelected" prefHeight="150.0" prefWidth="315.0" styleClass="emptyRectangle" />
+            <Button layoutX="144.0" layoutY="266.0" mnemonicParsing="false" onMouseClicked="#supprimerRecette" prefHeight="27.0" prefWidth="92.0" styleClass="buttonBlue" text="Supprimer" textFill="WHITE" />
+            <Button layoutX="487.0" layoutY="267.0" mnemonicParsing="false" onMouseClicked="#addRecette" prefHeight="25.0" prefWidth="92.0" styleClass="buttonBlue" text="Ajouter" textFill="WHITE" />
+            <Text fill="#054371" layoutX="231.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom du programme nutrition">
+                <font>
+                    <Font size="16.0" />
+                </font>
+            </Text>
+            <TextArea fx:id="descriptionProgramme" layoutX="40.0" layoutY="323.0" prefHeight="150.0" prefWidth="315.0" styleClass="emptyRectangle" />
+            <Text fill="#054371" layoutX="40.0" layoutY="319.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description" />
+            <Text fill="#054371" layoutX="376.0" layoutY="404.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Durée en mois" />
+            <Text fill="#054371" layoutX="376.0" layoutY="319.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Prix" />
+            <ComboBox fx:id="typeProgrammeNutrition" layoutX="40.0" layoutY="46.0" prefWidth="150.0" promptText="Difficulté" styleClass="emptyRectangle" />
+            <Slider fx:id="nbMoisProgrammeNutrition" layoutX="396.0" layoutY="424.0" majorTickUnit="1.0" max="12.0" min="1.0" onMouseReleased="#updateMoisValue" minorTickCount="1" prefHeight="33.0" prefWidth="271.0" showTickLabels="true" value="6.0" />
+            <Slider fx:id="prixProgrammeNutrition" layoutX="396.0" layoutY="339.0" max="2000.0" onMouseReleased="#updateMontantProgramme" prefHeight="33.0" prefWidth="271.0" showTickLabels="true" />
+            <Text fx:id="montantProgramme" fill="RED" layoutX="613.0" layoutY="319.0" strokeType="OUTSIDE" strokeWidth="0.0" text="montant" textAlignment="RIGHT" wrappingWidth="77.90478515625" />
+            <Text fx:id="nbMoisValue" fill="RED" layoutX="614.0" layoutY="404.0" strokeType="OUTSIDE" strokeWidth="0.0" text="mois" textAlignment="RIGHT" wrappingWidth="77.90478515625" />
+            <Text fill="#054371" layoutX="376.0" layoutY="102.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Les recettes disponibles">
+                <font>
+                    <Font size="16.0" />
+                </font>
+            </Text>
+        </children>
+    </Pane>
+    <Text fill="#054371" layoutX="278.0" layoutY="134.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Modifier le programme nutrition">
+        <font>
+            <Font size="34.0" />
+        </font>
+    </Text>
+    <Button fx:id="updateProgrammeNutritionButton" layoutX="408.0" layoutY="725.0" mnemonicParsing="false" onAction="#updateProgrammeNutrition" styleClass="buttonBlue" text="Modifier le programme nutrition" textFill="WHITE">
+        <font>
+            <Font size="16.0" />
+        </font>
+    </Button>
+    <VBox fx:id="headerAdmin" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
+        <children>
+            <fx:include source="../../../components/headers/header-admin.fxml" />
+        </children>
+    </VBox>
+    <VBox fx:id="headerCoach" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
+        <children>
+            <fx:include source="../../../components/headers/header-coach.fxml" />
+        </children>
+    </VBox>
+    <Text fx:id="errorText" fill="RED" layoutX="137.0" layoutY="187.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message d'erreur" textAlignment="CENTER" wrappingWidth="725.0" />
+</children>
 </Pane>
