--- a/src/main/resources/com/fitj/views/users/login-view.fxml
+++ b/src/main/resources/com/fitj/views/users/login-view.fxml
@@ -1,31 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.users.ControllerLogin">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" stylesheets="@../../styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.users.ControllerLogin">
    <children>
-      <Pane layoutX="325.0" layoutY="279.0" prefHeight="244.0" prefWidth="351.0" style="-fx-background-color: #cdcdcd; -fx-border-color: black; -fx-border-radius: 10px; -fx-background-radius: 10px;">
+      <Pane layoutX="325.0" layoutY="279.0" prefHeight="244.0" prefWidth="351.0" style="-fx-background-color: lightgrey; -fx-border-color: black; -fx-border-radius: 10px; -fx-background-radius: 10px;">
          <children>
-            <TextField fx:id="username" layoutX="54.0" layoutY="43.0" prefHeight="25.0" prefWidth="234.0" />
-            <PasswordField fx:id="password" layoutX="54.0" layoutY="109.0" prefHeight="26.0" prefWidth="234.0" />
-            <Text fill="#054371" layoutX="54.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Identifiant" wrappingWidth="92.13671875" />
-            <Text fill="#054371" layoutX="54.0" layoutY="99.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mot de passe" wrappingWidth="92.13671875" />
-            <Button fx:id="loginButton" layoutX="96.0" layoutY="188.0" mnemonicParsing="false" onAction="#handleButtonConnect" prefHeight="25.0" prefWidth="159.0" style="-fx-background-color: red;" text="Me connecter" textFill="WHITE">
+            <TextField fx:id="username" layoutX="54.0" layoutY="43.0" prefHeight="25.0" prefWidth="234.0" styleClass="emptyRectangle" />
+            <PasswordField fx:id="password" layoutX="54.0" layoutY="109.0" prefHeight="26.0" prefWidth="234.0" styleClass="emptyRectangle" />
+            <Text fill="#054371" layoutX="54.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email" wrappingWidth="92.13671875" />
+            <Text fill="#054371" layoutX="54.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mot de passe" wrappingWidth="92.13671875" />
+            <Button fx:id="loginButton" layoutX="97.0" layoutY="190.0" mnemonicParsing="false" onAction="#handleButtonConnect" prefHeight="25.0" prefWidth="159.0" styleClass="buttonRed" text="Me connecter" textFill="WHITE">
                <font>
                   <Font size="15.0" />
                </font>
             </Button>
             <Text fx:id="errorText" fill="RED" layoutX="30.0" layoutY="165.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="292.0" />
          </children></Pane>
-      <Text layoutX="411.0" layoutY="259.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Connexion" textAlignment="CENTER" wrappingWidth="178.13671875">
+      <Text fill="#054371" layoutX="411.0" layoutY="259.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Connexion" textAlignment="CENTER" wrappingWidth="178.13671875">
          <font>
             <Font size="28.0" />
          </font>
       </Text>
-      <Button fx:id="registerButton" layoutX="441.0" layoutY="542.0" mnemonicParsing="false" onAction="#goToRegister" prefHeight="25.0" prefWidth="119.0" style="-fx-background-color: #054371;" text="NOUVEAU ?" textFill="WHITE" />
-      <fx:include source="../../components/headers/header-home.fxml" />
-      <Button fx:id="visitorButton" layoutX="464.0" layoutY="760.0" mnemonicParsing="false" onAction="#goToVisitor" style="-fx-background-color: #054371;" text="&lt;&lt; Retour" textFill="WHITE" />
+      <Button fx:id="registerButton" layoutX="441.0" layoutY="542.0" mnemonicParsing="false" onAction="#goToRegister" prefHeight="25.0" prefWidth="119.0" styleClass="buttonBlue" text="NOUVEAU ?" textFill="WHITE" />
+      <Button fx:id="visitorButton" layoutX="451.0" layoutY="756.0" mnemonicParsing="false" onAction="#goToVisitor" styleClass="buttonBlue" text="&lt;&lt; Retour" textFill="WHITE" />
+      <Pane prefHeight="79.0" prefWidth="1000.0">
+         <children>
+            <fx:include source="../../components/headers/header-home.fxml" />
+         </children>
+      </Pane>
    </children>
-</AnchorPane>
+</Pane>
