--- a/src/main/resources/com/fitj/views/users/register-view.fxml
+++ b/src/main/resources/com/fitj/views/users/register-view.fxml
@@ -1,68 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.users.ControllerRegister">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" stylesheets="@../../styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.users.ControllerRegister">
     <children>
-        <Pane layoutX="325.0" layoutY="171.0" prefHeight="516.0" prefWidth="351.0" style="-fx-background-color: #cdcdcd; -fx-border-color: black; -fx-border-radius: 10px; -fx-background-radius: 10px;">
+        <Pane layoutX="325.0" layoutY="171.0" prefHeight="516.0" prefWidth="351.0" style="-fx-background-color: lightgrey; -fx-border-color: black; -fx-border-radius: 10px; -fx-background-radius: 10px;">
             <children>
-                <TextField fx:id="mail" layoutX="59.0" layoutY="39.0" prefHeight="25.0" prefWidth="234.0" />
+                <TextField fx:id="mail" layoutX="59.0" layoutY="39.0" prefHeight="25.0" prefWidth="234.0" styleClass="emptyRectangle" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="46.0" layoutX="58.0" layoutY="202.0" stroke="#054371" strokeType="INSIDE" styleClass="rectangleShape" width="234.0" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="46.0" layoutX="59.0" layoutY="137.0" stroke="#054371" strokeType="INSIDE" styleClass="rectangleShape" width="234.0" />
                 <Text fill="#054371" layoutX="59.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Adresse mail" wrappingWidth="92.13671875" />
                 <Text fill="#054371" layoutX="59.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pseudo" wrappingWidth="92.13671875" />
-                <TextField fx:id="pseudo" layoutX="59.0" layoutY="88.0" prefHeight="25.0" prefWidth="234.0" />
+                <TextField fx:id="pseudo" layoutX="59.0" layoutY="88.0" prefHeight="25.0" prefWidth="234.0" styleClass="emptyRectangle" />
                 <Text fx:id="errorText" fill="RED" layoutX="30.0" layoutY="456.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="292.0" />
-                <Text fill="#054371" layoutX="59.0" layoutY="351.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mot de passe" wrappingWidth="92.13671875" />
-                <Text fill="#054371" layoutX="59.0" layoutY="404.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Confirmation de mot de passe" wrappingWidth="170.5367431640625" />
+                <Text fill="#054371" layoutX="59.0" layoutY="370.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mot de passe" wrappingWidth="92.13671875" />
+                <Text fill="#054371" layoutX="59.0" layoutY="423.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Confirmation de mot de passe" wrappingWidth="170.5367431640625" />
             <Text fill="#054371" layoutX="59.0" layoutY="134.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Poids" wrappingWidth="92.13671875" />
-            <Text fill="#054371" layoutX="59.0" layoutY="188.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Taille" wrappingWidth="92.13671875" />
-            <Slider fx:id="poidsSlider" blockIncrement="1.0" cache="true" layoutX="60.0" layoutY="138.0" majorTickUnit="1.0" max="150.0" min="35.0" minorTickCount="0" prefHeight="15.0" prefWidth="234.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="70.0" />
-                <TextField layoutX="235.0" layoutY="119.0" prefHeight="20.0" prefWidth="44.0" style="-fx-background-color: transparent;" text="${poidsSlider.value}">
+            <Text fill="#054371" layoutX="59.0" layoutY="199.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Taille" wrappingWidth="92.13671875" />
+            <Slider fx:id="poidsSlider" blockIncrement="1.0" cache="true" layoutX="68.0" layoutY="141.0" majorTickUnit="1.0" max="150.0" min="35.0" minorTickCount="0" onMouseReleased="#updatePoidsValue" prefHeight="27.0" prefWidth="218.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="70.0" />
+            <Text fx:id="poidsValue" fill="#054371" layoutX="240.0" layoutY="132.0" style="-fx-background-color: transparent;" textAlignment="RIGHT" wrappingWidth="52.68798828125">
                <font>
                   <Font size="10.0" />
-               </font></TextField>
-            <Slider fx:id="tailleSlider" blockIncrement="1.0" cache="true" layoutX="59.0" layoutY="191.0" majorTickUnit="1.0" max="220.0" min="120.0" minorTickCount="0" prefHeight="15.0" prefWidth="234.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="170.0" />
-                <TextField layoutX="237.0" layoutY="174.0" prefHeight="20.0" prefWidth="44.0" style="-fx-background-color: transparent;" text="${tailleSlider.value}">
-               <font>
-                  <Font size="10.0" />
-               </font></TextField>
-
-                <Text fill="#054371" layoutX="59.0" layoutY="245.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sexe" wrappingWidth="92.13671875" />
-            <RadioButton fx:id="hommeRadio" layoutX="59.0" layoutY="257.0" mnemonicParsing="false" selected="true" text="Homme" textFill="#054371">
+               </font>
+                </Text>
+            <Slider fx:id="tailleSlider" blockIncrement="1.0" cache="true" layoutX="66.0" layoutY="206.0" majorTickUnit="1.0" max="220.0" min="120.0" minorTickCount="0" onMouseReleased="#updateTailleValue" prefHeight="38.0" prefWidth="218.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="170.0" />
+                <Text fx:id="tailleValue" fill="#054371" layoutX="240.0" layoutY="198.0" style="-fx-background-color: transparent;" textAlignment="RIGHT" wrappingWidth="52.68798828125">
+                   <font>
+                      <Font size="10.0" />
+                   </font>
+                </Text>
+                <Text fill="#054371" layoutX="59.0" layoutY="264.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sexe" wrappingWidth="92.13671875" />
+            <RadioButton fx:id="hommeRadio" layoutX="59.0" layoutY="276.0" mnemonicParsing="false" selected="true" text="Homme" textFill="#054371">
                <toggleGroup>
                   <ToggleGroup fx:id="sex" />
                </toggleGroup>
             </RadioButton>
-            <RadioButton fx:id="femmeRadio" layoutX="145.0" layoutY="257.0" mnemonicParsing="false" text="Femme" textFill="#054371" toggleGroup="$sex" />
-            <RadioButton fx:id="autreRadio" layoutX="240.0" layoutY="257.0" mnemonicParsing="false" text="Autre" textFill="#054371" toggleGroup="$sex" />
-            <PasswordField fx:id="password" layoutX="59.0" layoutY="355.0" prefHeight="26.0" prefWidth="234.0" />
-            <PasswordField fx:id="passwordConfirm" layoutX="59.0" layoutY="407.0" prefHeight="26.0" prefWidth="234.0" />
-            <Text fill="#054371" layoutX="282.0" layoutY="133.0" strokeType="OUTSIDE" strokeWidth="0.0" text="kg">
-               <font>
-                  <Font size="10.0" />
-               </font>
-            </Text>
-            <Text fill="#054371" layoutX="282.0" layoutY="187.0" strokeType="OUTSIDE" strokeWidth="0.0" text="cm">
-               <font>
-                  <Font size="10.0" />
-               </font>
-            </Text>
-                <Button fx:id="registerButton" layoutX="98.0" layoutY="473.0" mnemonicParsing="false" onAction="#handleButtonRegister" prefHeight="25.0" prefWidth="159.0" style="-fx-background-color: red;" text="Créer mon compte" textFill="WHITE">
+            <RadioButton fx:id="femmeRadio" layoutX="145.0" layoutY="276.0" mnemonicParsing="false" text="Femme" textFill="#054371" toggleGroup="$sex" />
+            <RadioButton fx:id="autreRadio" layoutX="240.0" layoutY="276.0" mnemonicParsing="false" text="Autre" textFill="#054371" toggleGroup="$sex" />
+            <PasswordField fx:id="password" layoutX="59.0" layoutY="374.0" prefHeight="26.0" prefWidth="234.0" styleClass="emptyRectangle" />
+            <PasswordField fx:id="passwordConfirm" layoutX="59.0" layoutY="426.0" prefHeight="26.0" prefWidth="234.0" styleClass="emptyRectangle" />
+                <Button fx:id="registerButton" layoutX="96.0" layoutY="472.0" mnemonicParsing="false" onAction="#handleButtonRegister" prefHeight="25.0" prefWidth="159.0" styleClass="buttonRed" text="Créer mon compte" textFill="WHITE">
                     <font>
                         <Font size="15.0" />
                     </font>
                 </Button>
-            <TextField fx:id="photoProfil" layoutX="58.0" layoutY="304.0" prefHeight="26.0" prefWidth="234.0" />
-            <Text fill="#054371" layoutX="59.0" layoutY="300.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Lien de la photo de profil" wrappingWidth="170.5367431640625" />
+            <TextField fx:id="photoProfil" layoutX="58.0" layoutY="323.0" prefHeight="26.0" prefWidth="234.0" styleClass="emptyRectangle" />
+            <Text fill="#054371" layoutX="59.0" layoutY="319.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Lien de la photo de profil" wrappingWidth="170.5367431640625" />
             </children></Pane>
-        <Text layoutX="412.0" layoutY="155.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Inscription" textAlignment="CENTER" wrappingWidth="178.13671875">
+        <Text fill="#054371" layoutX="412.0" layoutY="155.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Inscription" textAlignment="CENTER" wrappingWidth="178.13671875">
             <font>
                 <Font size="28.0" />
             </font>
         </Text>
-        <Button fx:id="loginButton" layoutX="441.0" layoutY="694.0" mnemonicParsing="false" onAction="#goToLogin" prefHeight="25.0" prefWidth="119.0" style="-fx-background-color: #054371;" text="Déjà inscrit?" textFill="WHITE" />
-        <fx:include source="../../components/headers/header-home.fxml" />
-      <Button fx:id="visitorButton" layoutX="464.0" layoutY="760.0" mnemonicParsing="false" onAction="#goToVisitor" style="-fx-background-color: #054371;" text="&lt;&lt; Retour" textFill="WHITE" />
+        <Button fx:id="loginButton" layoutX="441.0" layoutY="698.0" mnemonicParsing="false" onAction="#goToLogin" prefHeight="25.0" prefWidth="119.0" styleClass="buttonBlue" text="Déjà inscrit?" textFill="WHITE" />
+      <Button fx:id="visitorButton" layoutX="451.0" layoutY="756.0" mnemonicParsing="false" onAction="#goToVisitor" styleClass="buttonBlue" text="&lt;&lt; Retour" textFill="WHITE" />
+      <Pane prefHeight="77.0" prefWidth="1000.0">
+         <children>
+              <fx:include source="../../components/headers/header-home.fxml" />
+         </children>
+      </Pane>
     </children>
-</AnchorPane>
+</Pane>
