modif séance fini

--- a/src/main/resources/com/fitj/views/seances/update-seance.fxml
+++ b/src/main/resources/com/fitj/views/seances/update-seance.fxml
@@ -1,14 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.fitj.views.seances.UpdateSeance"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" stylesheets="@../../styles/style.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.seances.ControllerModifySeance">
+    <children>
+        <Pane layoutX="139.0" layoutY="173.0" prefHeight="515.0" prefWidth="725.0" style="-fx-border-color: #054371; -fx-background-radius: 10px; -fx-border-radius: 10px; -fx-background-color: lightgrey;">
+            <children>
+                <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="86.0" layoutX="372.0" layoutY="420.0" stroke="#054371" strokeLineCap="ROUND" strokeLineJoin="ROUND" styleClass="rectangleShape" width="334.0" />
+                <Text fill="#054371" layoutX="17.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Exercices de la séances">
+                    <font>
+                        <Font size="14.0" />
+                    </font>
+                </Text>
+                <TextField fx:id="nomSeance" layoutX="196.0" layoutY="49.0" prefHeight="28.0" prefWidth="334.0" styleClass="emptyRectangle" />
+                <ListView fx:id="listViewExercice" layoutX="372.0" layoutY="134.0" onMouseClicked="#setExerciceSelected" prefHeight="150.0" prefWidth="334.0" styleClass="emptyRectangle" />
+                <ListView fx:id="listViewExerciceSeance" layoutX="17.0" layoutY="134.0" onMouseClicked="#setExerciceSelectedToDelete" prefHeight="150.0" prefWidth="334.0" styleClass="emptyRectangle" />
+                <Button fx:id="deleteExerciceButton" layoutX="124.0" layoutY="347.0" mnemonicParsing="false" onMouseClicked="#supprimerExercice" prefHeight="27.0" prefWidth="92.0" style="-fx-background-color: #054371;" styleClass="buttonBlue" text="Supprimer" textFill="WHITE" />
+                <Button fx:id="addExerciceButton" layoutX="374.0" layoutY="347.0" mnemonicParsing="false" onMouseClicked="#addExercice" prefHeight="25.0" prefWidth="92.0" styleClass="buttonBlue" text="Ajouter" textFill="WHITE" />
+                <Text fill="#054371" layoutX="283.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom de la séance">
+                    <font>
+                        <Font size="20.0" />
+                    </font>
+                </Text>
+                <TextArea fx:id="descriptionSeance" layoutX="17.0" layoutY="419.0" prefHeight="86.0" prefWidth="334.0" scaleShape="false" styleClass="emptyRectangle" />
+                <Text fill="#054371" layoutX="17.0" layoutY="415.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description" />
+                <Text fill="#054371" layoutX="372.0" layoutY="415.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Prix" />
+                <Slider fx:id="prixSeance" layoutX="390.0" layoutY="447.0" max="200.0" onMouseReleased="#updateMontantSeance" prefHeight="33.0" prefWidth="298.0" showTickLabels="true" />
+                <Text fx:id="montantSeance" fill="RED" layoutX="657.0" layoutY="415.0" strokeType="OUTSIDE" strokeWidth="0.0" text="montant" />
+                <Spinner fx:id="nbSerieModifButton" layoutX="16.0" layoutY="311.0" onKeyPressed="#updateExercice" prefHeight="26.0" prefWidth="164.0" styleClass="emptyRectangle" />
+                <Spinner fx:id="nbRepetModifButton" layoutX="184.0" layoutY="311.0" onKeyPressed="#updateExercice" prefHeight="26.0" prefWidth="164.0" styleClass="emptyRectangle" />
+                <Spinner fx:id="nbSerieButton" layoutX="374.0" layoutY="311.0" prefHeight="26.0" prefWidth="164.0" styleClass="emptyRectangle" />
+                <Spinner fx:id="nbRepetButton" layoutX="539.0" layoutY="311.0" prefHeight="26.0" prefWidth="164.0" styleClass="emptyRectangle" />
+                <Text fx:id="nbSerieUpdateTxt" fill="#054371" layoutX="17.0" layoutY="307.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre Séries" />
+                <Text fx:id="nbRepetUpdateTxt" fill="#054371" layoutX="183.0" layoutY="307.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre répétitions" />
+                <Text fill="#054371" layoutX="374.0" layoutY="307.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre Séries" />
+                <Text fill="#054371" layoutX="539.0" layoutY="307.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre répétitions" />
+                <ComboBox fx:id="sportSeance" layoutX="17.0" layoutY="49.0" prefHeight="25.0" prefWidth="92.0" promptText="Sport" styleClass="emptyRectangle" />
+                <Button fx:id="updateExerciceButton" layoutX="17.0" layoutY="347.0" mnemonicParsing="false" onMouseClicked="#updateExercice" prefHeight="25.0" prefWidth="92.0" styleClass="buttonBlue" text="Modifier" textFill="WHITE" />
+                <Text fill="#054371" layoutX="374.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Exercices disponibles">
+                    <font>
+                        <Font size="14.0" />
+                    </font>
+                </Text>
+            </children>
+        </Pane>
+        <Text fill="#054371" layoutX="350.0" layoutY="120.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Modifier une séance">
+            <font>
+                <Font size="34.0" />
+            </font>
+        </Text>
+        <Button fx:id="updateSeance" layoutX="436.0" layoutY="722.0" mnemonicParsing="false" onAction="#updateSeance" styleClass="buttonBlue" text="Modifier la séance" textFill="WHITE">
+            <font>
+                <Font size="16.0" />
+            </font>
+        </Button>
+        <VBox fx:id="headerAdmin" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
+            <children>
+                <fx:include source="../../components/headers/header-admin.fxml" />
+            </children>
+        </VBox>
+        <VBox fx:id="headerCoach" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
+            <children>
+                <fx:include source="../../components/headers/header-coach.fxml" />
+            </children>
+        </VBox>
+        <Text fx:id="errorText" fill="RED" layoutX="139.0" layoutY="158.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message d'erreur" textAlignment="CENTER" wrappingWidth="725.0" />
+    </children>
+</Pane>
